# CPP-Datastructures

./: CMakeLists.txt  README.md  testEnvironments.json
main/: DLinkedList.h  HashMap.h  List.h  Queue.h  SLinkedList.h  Stack.h  Tree.h  TypeTraitsCheck.h  main.cpp
tests/LinkedLists/: dltest.cpp  sltest.cpp
tests/List/: ltest.cpp  ltest2.cpp
tests/Stack/: stacktest.cpp
